# AlgorithmViz

./: .gitignore  AlgorithmViz.pro  CMakeLists.txt  README.md
.cache/clangd/index/: arrow_shape.cpp.4A64861D3B596D6F.idx  arrow_shape.h.B063E8E19DFB45BD.idx  canvas.cpp.D11162C0EEB54E28.idx  canvas.h.BF6CB739C8C2D087.idx  canvas_controller.cpp.C12E7412F545768F.idx  connector_controller.cpp.4BC25AF1C0ED4612.idx  diamond_shape.cpp.4B4AF148909D4131.idx  diamond_shape.h.FD8DBC5B1F7E1B1D.idx  dual_arrow_shape.cpp.4AC88BFB2F5B2FB2.idx  dual_arrow_shape.h.01EE8ADD21BC95C1.idx  ellipse_shape.cpp.7A7E340D6001810D.idx  ellipse_shape.h.9E9CC86EE02B4652.idx  html_editor.cpp.F72D5D7E526DFE11.idx  html_editor.h.36B29E7D9B2E5414.idx  line_shape.cpp.37A4DA4081783ED1.idx  line_shape.h.8E256E46DE77ACB3.idx  main.cpp.29782E8F53A6F0BF.idx  main_window.cpp.A6D71FC7B517E8B7.idx  main_window.h.222F8DF692035CAF.idx  rect_shape.cpp.E8453865BD966106.idx  rect_shape.h.72601D00A78C212C.idx  shape.cpp.280D33D0C35630B0.idx  shape.h.962BD8015D420800.idx  svg_exporter.cpp.3166AD5FFE3CE606.idx  svg_exporter.h.93ADEA30B7699FD4.idx  text_label.cpp.00CE516DD90B233C.idx  text_label.h.7F9C8F755249B1C5.idx  undo_manager.cpp.027DE59802AF8CE1.idx
src/: main.cpp
src/connectors/: connector.cpp  connector.h
src/core/: canvas.cpp  canvas.h  shape_base.cpp  shape_base.h  undo_manager.cpp  undo_manager.h
src/core/layout_engine/: layout_engine.cpp  layout_engine.h
src/core/shape_controller/: anchor_resolver.cpp  anchor_resolver.h  canvas_controller.cpp  canvas_controller.h  connector_controller.cpp  connector_controller.h  control_box.cpp  control_box.h
src/editor/: html_editor.cpp  html_editor.h
src/export/: svg_exporter.cpp  svg_exporter.h
src/shapes/: arrow_shape.cpp  arrow_shape.h  connectable_shape.cpp  connectable_shape.h  diamond_shape.cpp  diamond_shape.h  dual_arrow_shape.cpp  dual_arrow_shape.h  ellipse_shape.cpp  ellipse_shape.h  line_shape.cpp  line_shape.h  rect_shape.cpp  rect_shape.h  shape.cpp  shape.h  text_label.cpp  text_label.h
src/shapes/connector/: connector.cpp  connector.h  connector_anchor.cpp  connector_anchor.h
src/ui/: main_window.cpp  main_window.h
tests/: connector_test.cpp  layout_engine_test.cpp
